# slice

./: .gitignore  README.md  bfrt_hw_commands.txt  compile.sh  config.json  hw_commands_tenant.txt  hw_commands_trafficgen.txt  main.py  pyproject.toml  requirements.txt
base/: base.p4  parsers.p4
base/network/: bfrt_program.sh  bfrt_shell.sh  network.py  program_runtime.sh  runtime_s1.py  s1_runtime.txt  s2_runtime.txt
controller/: controller.py  main.py  util.py
cpu_port/: base.p4
cpu_port/common/: headers.p4
cpu_port/network/: controller_s2.py  network.py
digest/: controller.py  digest.p4
digest/common/: headers.p4
digest/network/: controller_s1.py  network.py  program_runtime.sh  receive.py  runtime_s2.py  send.py
examples/: tna_digest.p4  tna_mirror.p4
graphs/: experiment_5.py  experiment_8.py  experiment_8_averages.py  test1.py  test3.py
graphs/experiment_5/: experiment_5_1.csv  experiment_5_2.csv  experiment_5_3.csv  experiment_5_SUM.txt
graphs/experiment_8/: experiment_8_ver_1_AVERAGES.txt  experiment_8_ver_2_AVERAGES.txt
match/: tna_exact_match.p4
meter/: controller.py  debug.p4  meter.p4
meter/common/: headers.p4  utils.p4
meter/network/: network.py  program_runtime.sh  runtime_s2.py  s1_runtime.txt  s2_runtime.txt  send.py
network/: network.py  program_runtime.sh  receive.py  runtime_prod.py  runtime_s1.py  runtime_s2.py  runtime_spam.py  runtime_tenants.py  send.py
slice/: .gitignore  debug.p4  meter.p4  slice.p4
slice/common/: headers.p4  utils.p4
slice/controller/: bfrt_client.py  (+2 more)
vlanhdr/: headers.p4  vlanhdr.p4
(+57 files in other folders)
