[project]
name = "p4slice_api"
version = "0.1.0"
description = "An API acting as the application plane for a network slicing solution!"
authors = [
    {name = "Pierre", email = "pierre.brosemer@gmail.com"},
]
dependencies = ["fastapi>=0.115.5", "pyjwt[crypto]>=2.10.0", "uvicorn[standard]>=0.32.1", "python-multipart>=0.0.17", "bcrypt>=4.2.1", "fastapi-limiter>=0.1.6", "protobuf>=5.29.0", "scapy>=2.6.1", "loguru>=0.7.2", "tabulate>=0.9.0"]
requires-python = ">3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
redis = {shell = "docker stop redis-slice; docker rm redis-slice; docker run --name redis-slice -p 6379:6379 -d redis redis-server --requirepass dff3b2d5437e66dc9d53eb10caa145f823e7422f6c0074559858cb191be87e19"}
server = "python main.py"
all = {composite = ["redis", "server"]}